--- a/front/style.css
+++ b/front/style.css
@@ -1,116 +1,72 @@
 
 body, html{
     background-color: #fff;
-    width: 100%;
-    max-width: 100%;
     margin: 0;
     box-sizing: border-box;
     padding: 0;
-    overflow-x: hidden;
 }
 
 /* NAVBAR */
 
-.big-box{
-    width: 100%;
-    max-width: 100%;
-    height: 35rem;
-    margin: 0 auto;
-    background-color: #fff;
-}
-
-.big-box nav{
-    border-radius: 12px;
-}
-
-nav{
-    background-color: #fff;
-    padding: 20px;
+.navbar{
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: #0d0d2b;
+    padding: 1rem;
+    box-shadow: 0 2px 10px rgb(0, 0, 0, 0.3);
 }
 
-.nombre{
-    font-weight: bold;
-    margin: 0  0 0;
-    width: 100%;
-    display: flex;
-   justify-content: space-between;
-}
-
-.nombre li {
+.navbar ul{
     list-style: none;
-    display: inline-block;
-    margin: 0 70px 0 0;
-}
-
-.nombre a{
-    text-decoration: none;
-    color: #000;
-    font-size: 1.2rem;
-    font-weight: 700;
-}
-
-
-
-/* IMAGEN DE FONDO */
-
-.img-box{
-    width: 100%;
-    height: 24rem;
-    background-image: url(img/santiago1.jpeg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-/* CAJA PEQUEÑA */
-
-.box-small{
-    width: 75%;
-    background-color: #fff;
-    margin: auto;
-    margin-top: -8rem;
     display: flex;
-    text-align: center;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    border-radius: 8px 8px 0 0;
-    padding: 10px;
+    gap: 2rem;
 }
 
-
-
-.box-small p{
-    font-size: 1.5rem;
-    font-weight: 500;
-    margin-top: 10px;
-    margin-bottom: 30px;
+.navbar li{
+    position: relative;
 }
 
-.box-small a{
-    margin-top: 20px;
+.navbar li a{
     text-decoration: none;
-    color: #000;
-    padding: 15px;
-    border-radius: 8px;
-    font-size: 1.2rem;
-    font-weight: 700;
-}
-
-.box-small a:hover{
-    background-color: #000;
     color: #fff;
-    transition: 0.5s ease-in;
+    margin: 0 20px 0 20px;
+    transition: color 0.3s;
+    font-size: 1.1rem;
+    font-weight: 500;
+    display: inline-block;
 }
 
-.relevante-information{
-    width: 80%;
-    height: auto;
+.navbar li a::after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #fff;
+    transition: width 0.3s;
+    margin: 0 auto;
 }
+
+.navbar li a:hover::after {
+    width: 100%;
+}
+
+
+/* seccion de bordes con curvas */
+
+.habilidades{
+    background-color: #0d0d2b;
+    color: #fff;
+    padding: 100px 20px;
+    text-align: center;
+}
+
+
 
 
 /*CAJA DE INFORMACION*/
@@ -158,72 +114,11 @@ nav{
 
 /* CAJA ACERCA DE MI */
 
-.about-me{
-    width: 80%;
-    height: auto;
-    margin: auto;
-    margin-top: 4rem;
-    margin-bottom: 4rem;
-    border-radius: 20px;
-    background-color: #dcdcdc;
-    display: flex;
-    justify-content: space-between; /*Espacio entre elementos de extremos a extremo*/ 
-    align-items: center;
-    flex-direction: row; /*alinea los elementos en fila para que queden alineados*/
-}
-
-.about-me h2{
-    margin-bottom: 1rem;
-    margin-top: 2rem;
-    font-size: 2rem;
-}
-
-.about-me-text{
-    width: 40%;
-    float: center;
-    text-align: justify;
-    margin-left: 10rem;
-    margin-right: 5rem;
-}
-
-.about-me-img{
-    width: 60%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 15px 0 15px 0;
-}
-
-.about-me-img img{
-    border-radius: 70%;
-    width: 80%;
-    height: 32rem;
-
-}
-
 
 /*MEDIAS*/
 
 @media (max-width: 768px) { /*Aplica el media cuando el ancho de la pantalla sea igual o menor a el valor*/
-    nav{
-        flex-direction: column;
-        align-items: start;
-    }
-    .big-box{
-        width: 100%;
-        height: auto;
-    }
-    .img-box{
-        width: 100%;
-        height: 20rem;
-    }
-    .box-small{
-        width: 90%;
-        height: auto;
-    }
-    .relevante-information p{
-        font-size: 1.5rem;
-    }
+
     .informacion img{
         width: 50%;
         margin-bottom: 2rem;
@@ -232,39 +127,9 @@ nav{
         width: 50%; 
         height: auto;
     }
-    .about-me{
-        text-align: center;
-        flex-direction: column;
-    }
-    .about-me-img img{
-        width: 80%;
-        height: auto;
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-    }
-    .about-me-text {
-        margin-left: -1rem;
-        margin-right: -1rem;
-        width: 70%;
-    }
 }
 
 @media (max-width: 480px) {
-    .big-box{
-        width: 100%;
-        height: auto;
-    }
-    .img-box{
-        width: 100%;
-        height: 20rem;
-    }
-    .box-small{
-        width: 90%;
-        height: auto;
-    }
-    .relevante-information p{
-        font-size: 1.5rem;
-    }
     .informacion img{
         width: 80%;
     }
@@ -286,9 +151,6 @@ nav{
         margin-bottom: 2rem;
     }
     .informacion{
-        width: 100%;
-    }
-    .about-me{
         width: 100%;
     }
 }
