--- a/front/style.css
+++ b/front/style.css
@@ -15,7 +15,7 @@ body, html{
     position: sticky;
     top: 0;
     z-index: 1000;
-    background-color: #0d0d2b;
+    background-color: #dcdcdc;
     padding: 1rem;
     box-shadow: 0 2px 10px rgb(0, 0, 0, 0.3);
 }
@@ -34,7 +34,7 @@ body, html{
 
 .navbar li a{
     text-decoration: none;
-    color: #fff;
+    color: #000;
     margin: 0 20px 0 20px;
     transition: color 0.3s;
     font-size: 1.1rem;
@@ -60,13 +60,28 @@ body, html{
 /* seccion de bordes con curvas */
 
 .habilidades{
-    background-color: #0d0d2b;
-    color: #fff;
-    padding: 100px 20px;
+    background-color: #dcdcdc;
+    color: #000;
+    padding: 60px 20px;
     text-align: center;
+    display: flex;
 }
 
+.imagen{
+    width: 40%;
+    margin-right: 2rem;
+}
 
+.imagen img{
+    width: 60%;
+    height: 17rem;
+    border-radius: 30%;
+}
+
+.texto{
+    width: 50%;
+    margin: auto;
+}
 
 
 /*CAJA DE INFORMACION*/
